--- a/assets/styles/scss/blocks/slick/slick.scss
+++ b/assets/styles/scss/blocks/slick/slick.scss
@@ -122,11 +122,10 @@
 }
 
 .slider__itemSpell {
-    height: 3em;
+    height: 4em;
     margin: 0 1%;
     padding: 0;
-
-
+    text-align: center;
 }
 
 .slider_spells p {
