--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -574,7 +574,7 @@ template {
 
 .comments__block {
   box-sizing: border-box;
-  padding: 2em 0 3em 0;
+  padding: 2em 0 0 0;
   display: flex;
   justify-content: space-between;
 }
