--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -575,20 +575,19 @@ template {
   font-size: 26px;
 }
 
-.comments__result {
+#comment-field {
   display: flex;
   flex-direction: column;
 }
 
-.comments__result-item {
-  width: 38rem;
-  height: 7rem;
-  background-color: white;
-  opacity: 0.8;
-  border-radius: 27px;
-  margin-bottom: 5px;
-}
-
+/*.comments__result-item {
+    width: 38rem;
+    height: 7rem;
+    background-color: white;
+    opacity: 0.8;
+    border-radius: 27px;
+    margin-bottom: 5px;
+}*/
 .comments__photo {
   display: block;
   position: relative;
@@ -598,7 +597,7 @@ template {
 
 .comments__name {
   font-size: 25px;
-  margin: -3.5rem 0 0 5rem;
+  margin: 1rem 0 0 5rem;
 }
 
 .comments__content {
@@ -607,8 +606,9 @@ template {
 }
 
 .comments__time {
+  display: block;
   font-size: 15px;
-  margin: 0 0 1rem 32rem;
+  margin: -1rem 0 0 32rem;
 }
 
 .comments {
