--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -18,3 +18,4 @@
 @import "../scss/blocks/form/form.scss";
 @import "../scss/blocks/button/button.scss";
 @import "../scss/blocks/hero+spell/hero+spell.scss";
+@import "../scss/modal2.scss";
